# Anime-Visual-Research-Engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
notebooks/: 01_explore_bakemonogatari.ipynb
src/vsde/: __init__.py  config.py
src/vsde/data/: __init__.py  models.py  schemas.sql
src/vsde/modules/: __init__.py  baseline_builder.py  clusterizer.py  differential_engine.py  embedder.py  keyframe_extractor.py  knowledge_base.py  shot_segmenter.py  video_loader.py
src/vsde/utils/: __init__.py  logger.py
